--- a/tests/TheAppointmentApi.SpecTests/TheAppointmentApi.SpecTests.csproj
+++ b/tests/TheAppointmentApi.SpecTests/TheAppointmentApi.SpecTests.csproj
@@ -5,20 +5,21 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Bogus" Version="22.0.8" />
+    <PackageReference Include="Bogus" Version="22.3.2" />
     <PackageReference Include="Common.Logging.Serilog" Version="4.3.6" />
-    <PackageReference Include="FluentAssertions" version="5.3.0" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.7.0" />
-    <PackageReference Include="Moq" Version="4.8.2" />
+    <PackageReference Include="FluentAssertions" version="5.4.1" />
+    <PackageReference Include="JetBrains.Annotations" Version="11.1.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.8.0" />
+    <PackageReference Include="Moq" Version="4.9.0" />
     <PackageReference Include="Moq.Analyzers" Version="0.0.4.43043" />
     <PackageReference Include="Serilog.Sinks.Observable" Version="2.0.2" />
     <PackageReference Include="Serilog.Sinks.Seq" Version="4.0.0" />
-    <PackageReference Include="Serilog.Sinks.XUnit" Version="1.0.5" />
-    <PackageReference Include="SimpleInjector" Version="4.2.2" />
+    <PackageReference Include="Serilog.Sinks.XUnit" Version="1.0.6" />
+    <PackageReference Include="SimpleInjector" Version="4.3.0" />
     <PackageReference Include="SpecFlow" Version="2.3.2" />
-    <PackageReference Include="System.Reactive" Version="3.1.1" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
-    <PackageReference Include="xunit" Version="2.3.1" />
+    <PackageReference Include="System.Reactive" Version="4.0.0" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
+    <PackageReference Include="xunit" Version="2.4.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -28,6 +29,12 @@
   <ItemGroup>
     <ProjectReference Include="..\..\src\TheAppointmentApi.Service\TheAppointmentApi.Service.csproj" />
     <ProjectReference Include="..\..\src\TheAppointmentApi.WebApi\TheAppointmentApi.WebApi.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="System.Web.Http">
+      <HintPath>..\..\packages\Microsoft.AspNet.WebApi.Core.5.2.4\lib\net45\System.Web.Http.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
   <ItemGroup>
